# reina-vk

./: .gitignore  Buffer.cpp  Buffer.h  CMakeLists.txt  DescriptorSet.cpp  DescriptorSet.h  Model.cpp  Model.h  PushConstants.cpp  PushConstants.h  README.md  Shader.cpp  Shader.h  Window.cpp  Window.h  consts.h  main.cpp  main_old.cpp  vktools.cpp  vktools.h
config/: config.toml
lib/tiny_obj_loader/: tiny_obj_loader.h
models/: candle_base.mtl  cornell_light.mtl  plant_leaves_1.mtl  plant_pot.mtl  plant_soil.mtl
polyglot/: bloom.h  common.h  raytrace.h  tonemapping.h
shaders/: LICENSE.txt  closestHitCommon.h.glsl  compile.bat  dielectric.rchit.glsl  dielectric.rchit.spv  display.frag.glsl  display.frag.spv  display.vert.glsl  display.vert.spv  lambertian.rchit.glsl  lambertian.rchit.spv  metal.rchit.glsl  metal.rchit.spv  nee.h.glsl  pdf.h.glsl  postprocessing.comp.glsl  postprocessing.comp.spv  raygen.rgen  raygen.spv  raytrace.rchit.glsl  raytrace.rchit.spv  raytrace.rgen.glsl  raytrace.rgen.spv  raytrace.rmiss.glsl  raytrace.rmiss.spv  shaderCommon.h.glsl  shadow.rmiss.spv
shaders/postprocessing/bloom/: blurCommon.h.glsl  blurX.comp.glsl  blurX.comp.spv  blurY.comp.glsl  blurY.comp.spv  combine.comp.glsl  combine.comp.spv
shaders/postprocessing/tonemap/: postprocessing.comp.glsl  postprocessing.comp.spv  tonemapping.comp.glsl  tonemapping.comp.spv
shaders/raytrace/: brdfDisney.h.glsl  closestHitCommon.h.glsl  dielectric.rchit.glsl  dielectric.rchit.spv  disney.h.glsl  disney.rchit.glsl  disney.rchit.spv  disneyAttempt2.h.glsl  lambertian.rchit.glsl  lambertian.rchit.spv  metal.rchit.glsl  metal.rchit.spv  nee.h.glsl  raytrace.rgen.glsl  raytrace.rgen.spv  raytrace.rmiss.glsl  raytrace.rmiss.spv  shaderCommon.h.glsl  shadow.rmiss.glsl  shadow.rmiss.spv  texutils.h.glsl
src/: Reina.cpp  Reina.h  main.cpp
src/core/: Buffer.cpp  Buffer.h  CmdBuffer.cpp  CmdBuffer.h  DescriptorSet.cpp  DescriptorSet.h  PushConstants.cpp  PushConstants.h
src/graphics/: Blas.cpp  Blas.h  Camera.cpp  Camera.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Instances.cpp  Instances.h  Model.cpp  Model.h  Models.cpp  Models.h  ObjectProperties.h  Shader.cpp  Shader.h
src/scene/: Instance.cpp  Instance.h  Instances.cpp  Instances.h  Models.cpp  Models.h  Scene.cpp  Scene.h
src/scene/gltf/: gltfloader.cpp  gltfloader.h
src/tools/: Clock.cpp  Clock.h  SaveManager.cpp  SaveManager.h  vktools.cpp  vktools.h
src/window/: Window.cpp  Window.h
